--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "http-request-cache",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Package to cache HTTP GET requests using Node-cache and Axios",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "thathva",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.7.2",
     "node-cache": "^5.1.2"
